apps/rclone/components/tls/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: rclone-webdav
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
        - name: rclone-ftp
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: rclone-tls
