apps/rclone/components/tls/patch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: rclone-ftp
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private/tls.key
              subPath: tls.key
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private/tls.crt
              subPath: tls.crt
              readOnly: true
            - name: tls
              mountPath: /usr/local/share/ca-certificates/Nishir_Root_CA.crt
              subPath: ca.crt
              readOnly: true
        - name: rclone-webdav
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private/tls.key
              subPath: tls.key
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private/tls.crt
              subPath: tls.crt
              readOnly: true
            - name: tls
              mountPath: /usr/local/share/ca-certificates/Nishir_Root_CA.crt
              subPath: ca.crt
              readOnly: true
      volumes:
        - name: certs
          emptyDir: {}
        - name: tls
          secret:
            secretName: rclone-tls
