apps/rclone/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rclone
spec:
  template:
    spec:
      containers:
        - name: rclone-ftp
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
        - name: rclone-webdav
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
