apps/rclone/components/tls/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3
  namespace: shikanime
spec:
  ports:
    - name: https
      port: 443
      targetPort: s3
