apps/rclone/components/tls/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav
  namespace: shikanime
spec:
  ports:
    - name: https
      port: 443
      targetPort: webdav
