apps/rclone/components/tls/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: webdav
      port:
        name: https
