apps/rclone/components/tls/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rclone
spec:
  defaultBackend:
    service:
      name: webdav
      port:
        name: https
